2011-05-07  Dawit Alemayehu  <adawit@kde.org>

Reviewed by Daniel Bates.

        Fix compile with GCC 4.6.0
        https://bugs.webkit.org/show_bug.cgi?id=60380

        Remove unused local variable from code.

        * runtime/StringPrototype.cpp:
        (JSC::stringProtoFuncMatch):


Canonical link: https://commits.webkit.org/75681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86008 268f45cc-cd09-0410-ab3c-d52691b4dbfc